@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.10355 2005/06/13 18:42:43 jmmv Exp $
+$NetBSD: CHANGES,v 1.10356 2005/06/13 20:39:47 reinoud Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 	
@@ -2869,3 +2869,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated graphics/ruby-imlib2 to 0.5.2 [taca 2005-06-12]
 	Updated databases/ruby-mysql to 2.6 [taca 2005-06-12]
 	Updated devel/treecc to 0.3.6 [jmmv 2005-06-13]
+	Updated misc/udfclient to 0.4.5 [reinoud 2005-06-13]
